Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -78,3 +78,4 @@ Temporary commit content 953
 Temporary commit content 954
 Temporary commit content 959
 Temporary commit content 969
+Temporary commit content 971
