Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -63,3 +63,4 @@ Temporary commit content 772
 Temporary commit content 784
 Temporary commit content 810
 Temporary commit content 814
+Temporary commit content 816
