Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -24,3 +24,4 @@ Temporary commit content 344
 Temporary commit content 354
 Temporary commit content 370
 Temporary commit content 380
+Temporary commit content 381
