Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -41,3 +41,4 @@ Temporary commit content 564
 Temporary commit content 565
 Temporary commit content 573
 Temporary commit content 579
+Temporary commit content 583
