Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -100,3 +100,4 @@ Temporary commit content 1115
 Temporary commit content 1119
 Temporary commit content 1124
 Temporary commit content 1130
+Temporary commit content 1140
