Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@ Temporary commit content 202
 Temporary commit content 228
 Temporary commit content 246
 Temporary commit content 248
+Temporary commit content 254
