Updated project documentation

--- a/index.html
+++ b/index.html
@@ -34,3 +34,4 @@ Temporary commit content 469
 Temporary commit content 494
 Temporary commit content 497
 Temporary commit content 516
+Temporary commit content 532
