Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@ Temporary commit content 259
 Temporary commit content 263
 Temporary commit content 281
 Temporary commit content 284
+Temporary commit content 287
