Optimized database queries

--- a/index.html
+++ b/index.html
@@ -33,3 +33,4 @@ Temporary commit content 467
 Temporary commit content 469
 Temporary commit content 494
 Temporary commit content 497
+Temporary commit content 516
