Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -49,3 +49,4 @@ Temporary commit content 624
 Temporary commit content 635
 Temporary commit content 637
 Temporary commit content 640
+Temporary commit content 651
