Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -79,3 +79,4 @@ Temporary commit content 954
 Temporary commit content 959
 Temporary commit content 969
 Temporary commit content 971
+Temporary commit content 978
