Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -68,3 +68,4 @@ Temporary commit content 848
 Temporary commit content 869
 Temporary commit content 872
 Temporary commit content 900
+Temporary commit content 904
