Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -54,3 +54,4 @@ Temporary commit content 656
 Temporary commit content 676
 Temporary commit content 693
 Temporary commit content 719
+Temporary commit content 731
