Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -25,3 +25,4 @@ Temporary commit content 354
 Temporary commit content 370
 Temporary commit content 380
 Temporary commit content 381
+Temporary commit content 391
