Added validation for user input

--- a/index.html
+++ b/index.html
@@ -52,3 +52,4 @@ Temporary commit content 640
 Temporary commit content 651
 Temporary commit content 656
 Temporary commit content 676
+Temporary commit content 693
