Updated project documentation

--- a/index.html
+++ b/index.html
@@ -29,3 +29,4 @@ Temporary commit content 391
 Temporary commit content 413
 Temporary commit content 433
 Temporary commit content 464
+Temporary commit content 467
