Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -21,3 +21,4 @@ Temporary commit content 287
 Temporary commit content 308
 Temporary commit content 316
 Temporary commit content 344
+Temporary commit content 354
