Added validation for user input

--- a/index.html
+++ b/index.html
@@ -69,3 +69,4 @@ Temporary commit content 869
 Temporary commit content 872
 Temporary commit content 900
 Temporary commit content 904
+Temporary commit content 918
