Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -59,3 +59,4 @@ Temporary commit content 732
 Temporary commit content 746
 Temporary commit content 763
 Temporary commit content 765
+Temporary commit content 772
