Added validation for user input

--- a/index.html
+++ b/index.html
@@ -30,3 +30,4 @@ Temporary commit content 413
 Temporary commit content 433
 Temporary commit content 464
 Temporary commit content 467
+Temporary commit content 469
