Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ Temporary commit content 112
 Temporary commit content 127
 Temporary commit content 131
 Temporary commit content 145
+Temporary commit content 158
