Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -88,3 +88,4 @@ Temporary commit content 1010
 Temporary commit content 1017
 Temporary commit content 1041
 Temporary commit content 1044
+Temporary commit content 1062
