Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -84,3 +84,4 @@ Temporary commit content 983
 Temporary commit content 990
 Temporary commit content 994
 Temporary commit content 999
+Temporary commit content 1010
