Added initial project plan

--- a/index.html
+++ b/index.html
@@ -77,3 +77,4 @@ Temporary commit content 945
 Temporary commit content 953
 Temporary commit content 954
 Temporary commit content 959
+Temporary commit content 969
