Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -99,3 +99,4 @@ Temporary commit content 1108
 Temporary commit content 1115
 Temporary commit content 1119
 Temporary commit content 1124
+Temporary commit content 1130
