Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -22,3 +22,4 @@ Temporary commit content 308
 Temporary commit content 316
 Temporary commit content 344
 Temporary commit content 354
+Temporary commit content 370
