Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -56,3 +56,4 @@ Temporary commit content 693
 Temporary commit content 719
 Temporary commit content 731
 Temporary commit content 732
+Temporary commit content 746
