Added initial project plan

--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ Temporary commit content 111
 Temporary commit content 112
 Temporary commit content 127
 Temporary commit content 131
+Temporary commit content 145
