Updated project documentation

--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@ Temporary commit content 433
 Temporary commit content 464
 Temporary commit content 467
 Temporary commit content 469
+Temporary commit content 494
