Optimized database queries

--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@ Temporary commit content 127
 Temporary commit content 131
 Temporary commit content 145
 Temporary commit content 158
+Temporary commit content 187
