Updated README with new features

--- a/index.html
+++ b/index.html
@@ -93,3 +93,4 @@ Temporary commit content 1066
 Temporary commit content 1067
 Temporary commit content 1089
 Temporary commit content 1092
+Temporary commit content 1100
