Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -85,3 +85,4 @@ Temporary commit content 990
 Temporary commit content 994
 Temporary commit content 999
 Temporary commit content 1010
+Temporary commit content 1017
