Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -60,3 +60,4 @@ Temporary commit content 746
 Temporary commit content 763
 Temporary commit content 765
 Temporary commit content 772
+Temporary commit content 784
