Added validation for user input

--- a/index.html
+++ b/index.html
@@ -42,3 +42,4 @@ Temporary commit content 565
 Temporary commit content 573
 Temporary commit content 579
 Temporary commit content 583
+Temporary commit content 586
