Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -32,3 +32,4 @@ Temporary commit content 464
 Temporary commit content 467
 Temporary commit content 469
 Temporary commit content 494
+Temporary commit content 497
