Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -91,3 +91,4 @@ Temporary commit content 1044
 Temporary commit content 1062
 Temporary commit content 1066
 Temporary commit content 1067
+Temporary commit content 1089
