Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@ Temporary commit content 246
 Temporary commit content 248
 Temporary commit content 254
 Temporary commit content 259
+Temporary commit content 263
