Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@ Temporary commit content 158
 Temporary commit content 187
 Temporary commit content 202
 Temporary commit content 228
+Temporary commit content 246
