Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -51,3 +51,4 @@ Temporary commit content 637
 Temporary commit content 640
 Temporary commit content 651
 Temporary commit content 656
+Temporary commit content 676
