Optimized database queries

--- a/index.html
+++ b/index.html
@@ -94,3 +94,4 @@ Temporary commit content 1067
 Temporary commit content 1089
 Temporary commit content 1092
 Temporary commit content 1100
+Temporary commit content 1104
