Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -97,3 +97,4 @@ Temporary commit content 1100
 Temporary commit content 1104
 Temporary commit content 1108
 Temporary commit content 1115
+Temporary commit content 1119
