Updated project documentation

--- a/index.html
+++ b/index.html
@@ -50,3 +50,4 @@ Temporary commit content 635
 Temporary commit content 637
 Temporary commit content 640
 Temporary commit content 651
+Temporary commit content 656
