Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -37,3 +37,4 @@ Temporary commit content 516
 Temporary commit content 532
 Temporary commit content 553
 Temporary commit content 556
+Temporary commit content 564
