Added validation for user input

--- a/index.html
+++ b/index.html
@@ -15,3 +15,4 @@ Temporary commit content 248
 Temporary commit content 254
 Temporary commit content 259
 Temporary commit content 263
+Temporary commit content 281
