Optimized database queries

--- a/index.html
+++ b/index.html
@@ -76,3 +76,4 @@ Temporary commit content 942
 Temporary commit content 945
 Temporary commit content 953
 Temporary commit content 954
+Temporary commit content 959
