Optimized database queries

--- a/index.html
+++ b/index.html
@@ -75,3 +75,4 @@ Temporary commit content 932
 Temporary commit content 942
 Temporary commit content 945
 Temporary commit content 953
+Temporary commit content 954
