Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -82,3 +82,4 @@ Temporary commit content 971
 Temporary commit content 978
 Temporary commit content 983
 Temporary commit content 990
+Temporary commit content 994
