Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -86,3 +86,4 @@ Temporary commit content 994
 Temporary commit content 999
 Temporary commit content 1010
 Temporary commit content 1017
+Temporary commit content 1041
