Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -61,3 +61,4 @@ Temporary commit content 763
 Temporary commit content 765
 Temporary commit content 772
 Temporary commit content 784
+Temporary commit content 810
