Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -95,3 +95,4 @@ Temporary commit content 1089
 Temporary commit content 1092
 Temporary commit content 1100
 Temporary commit content 1104
+Temporary commit content 1108
