Added validation for user input

--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@ Temporary commit content 597
 Temporary commit content 598
 Temporary commit content 624
 Temporary commit content 635
+Temporary commit content 637
