Updated README with new features

--- a/index.html
+++ b/index.html
@@ -81,3 +81,4 @@ Temporary commit content 969
 Temporary commit content 971
 Temporary commit content 978
 Temporary commit content 983
+Temporary commit content 990
