Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -55,3 +55,4 @@ Temporary commit content 676
 Temporary commit content 693
 Temporary commit content 719
 Temporary commit content 731
+Temporary commit content 732
