Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -92,3 +92,4 @@ Temporary commit content 1062
 Temporary commit content 1066
 Temporary commit content 1067
 Temporary commit content 1089
+Temporary commit content 1092
