Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -74,3 +74,4 @@ Temporary commit content 929
 Temporary commit content 932
 Temporary commit content 942
 Temporary commit content 945
+Temporary commit content 953
