Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -46,3 +46,4 @@ Temporary commit content 586
 Temporary commit content 597
 Temporary commit content 598
 Temporary commit content 624
+Temporary commit content 635
