Optimized database queries

--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@ Temporary commit content 228
 Temporary commit content 246
 Temporary commit content 248
 Temporary commit content 254
+Temporary commit content 259
